--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
         "build": "nest build",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
         "start": "nest start",
-        "dev": "nest start --watch",
+        "dev": "docker:start && nest start --watch",
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
+        "docker:up": "docker compose up -d",
+        "docker:stop": "docker stop mssql",
+        "docker:start": "docker start mssql",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
         "test": "jest",
         "test:watch": "jest --watch",
