--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
         "build": "nest build",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
         "start": "nest start",
-        "dev": "docker:start && nest start --watch",
+        "dev": "nest start --watch",
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
         "docker:up": "docker compose up -d",
         "docker:stop": "docker stop mssql",
         "docker:start": "docker start mssql",
+        "docker:populate": "docker exec -it mssql /bin/bash /usr/src/app/populate.sh",
+        "docker:dev": "yarn docker:up && sleep 12s && yarn dev & sleep 30s && yarn docker:populate && pkill node",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
         "test": "jest",
         "test:watch": "jest --watch",
