--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
         "docker:up": "docker compose up -d",
-        "docker:stop": "docker stop mssql",
-        "docker:start": "docker start mssql",
-        "docker:populate": "docker exec -it mssql /bin/bash /usr/src/app/populate.sh",
-        "docker:dev": "yarn docker:up && sleep 12s && yarn dev & sleep 30s && yarn docker:populate && pkill node",
+        "docker:stop": "docker stop posrgres",
+        "docker:start": "docker start postgres",
+        "docker:populate": "docker exec -it postgres /bin/bash /usr/src/app/populate.sh",
+        "docker:dev": "yarn docker:up && sleep 3s && yarn dev & sleep 10s && yarn docker:populate && pkill node",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
         "test": "jest",
         "test:watch": "jest --watch",
@@ -40,6 +40,7 @@
         "passport": "^0.6.0",
         "passport-jwt": "^4.0.1",
         "passport-local": "^1.0.0",
+        "pg": "^8.10.0",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.2.0",
         "typeorm": "^0.3.12"
