--- a/package.json
+++ b/package.json
@@ -7,16 +7,15 @@
     "license": "UNLICENSED",
     "scripts": {
         "build": "nest build",
-        "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+        "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" \"libs/**/*.ts\"",
         "start": "nest start",
-        "dev": "nest start --watch",
+        "dev": "kill-port 3001 && nest start --watch",
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
         "docker:up": "docker compose up -d",
         "docker:stop": "docker stop posrgres",
         "docker:start": "docker start postgres",
         "docker:populate": "docker exec -it postgres /bin/bash /usr/src/app/populate.sh",
-        "docker:dev": "yarn docker:up && sleep 3s && yarn dev & sleep 10s && yarn docker:populate && pkill node",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
         "test": "jest",
         "test:watch": "jest --watch",
@@ -58,6 +57,7 @@
         "@types/passport-local": "^1.0.35",
         "@types/supertest": "^2.0.11",
         "jest": "29.3.1",
+        "kill-port": "^2.0.1",
         "prettier": "^2.3.2",
         "source-map-support": "^0.5.20",
         "supertest": "^6.1.3",
@@ -73,7 +73,7 @@
             "json",
             "ts"
         ],
-        "rootDir": "src",
+        "rootDir": ".",
         "testRegex": ".*\\.spec\\.ts$",
         "transform": {
             "^.+\\.(t|j)s$": "ts-jest"
@@ -81,7 +81,14 @@
         "collectCoverageFrom": [
             "**/*.(t|j)s"
         ],
-        "coverageDirectory": "../coverage",
-        "testEnvironment": "node"
+        "coverageDirectory": "./coverage",
+        "testEnvironment": "node",
+        "roots": [
+            "<rootDir>/src/",
+            "<rootDir>/libs/"
+        ],
+        "moduleNameMapper": {
+            "^@app/common(|/.*)$": "<rootDir>/libs/common/src/$1"
+        }
     }
 }
