--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
         "dotenv": "^16.0.3",
+        "lodash": "^4.17.21",
         "mssql": "^9.1.1",
         "passport": "^0.6.0",
         "passport-jwt": "^4.0.1",
@@ -52,6 +53,7 @@
         "@types/express": "^4.17.13",
         "@types/jest": "29.2.4",
         "@types/jsonwebtoken": "^9.0.1",
+        "@types/lodash": "^4.14.194",
         "@types/node": "18.11.18",
         "@types/passport-jwt": "^3.0.8",
         "@types/passport-local": "^1.0.35",
