chore:config jest coverage paths

--- a/jest.config.json
+++ b/jest.config.json
@@ -20,6 +20,7 @@
         ".module.ts",
         "<rootDir>/src/app/main.ts",
         ".mock.ts",
+        ".model.ts",
         "index.ts"
     ]
 }
