feature: replace dotenv to use config from nest

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
         "docker:up": "docker compose up -d",
-        "docker:stop": "docker stop posrgres",
+        "docker:stop": "docker stop postgres",
         "docker:start": "docker start postgres",
         "docker:populate": "docker exec -it postgres /bin/bash /usr/src/app/populate.sh",
         "docker:dev": "yarn docker:up && sleep 3s && yarn dev & sleep 10s && yarn docker:populate && pkill node",
@@ -35,7 +35,6 @@
         "bcrypt": "^5.1.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
-        "dotenv": "^16.0.3",
         "mssql": "^9.1.1",
         "passport": "^0.6.0",
         "passport-jwt": "^4.0.1",
