--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "license": "UNLICENSED",
     "scripts": {
         "build": "nest build",
-        "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+        "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" \"libs/**/*.ts\"",
         "start": "nest start",
         "dev": "nest start --watch",
         "start:debug": "nest start --debug --watch",
@@ -16,7 +16,6 @@
         "docker:stop": "docker stop posrgres",
         "docker:start": "docker start postgres",
         "docker:populate": "docker exec -it postgres /bin/bash /usr/src/app/populate.sh",
-        "docker:dev": "yarn docker:up && sleep 3s && yarn dev & sleep 10s && yarn docker:populate && pkill node",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
         "test": "jest",
         "test:watch": "jest --watch",
@@ -36,6 +35,7 @@
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
         "dotenv": "^16.0.3",
+        "lodash": "^4.17.21",
         "mssql": "^9.1.1",
         "passport": "^0.6.0",
         "passport-jwt": "^4.0.1",
@@ -46,6 +46,7 @@
         "typeorm": "^0.3.12"
     },
     "devDependencies": {
+        "@faker-js/faker": "^8.0.2",
         "@nestjs/cli": "^9.0.0",
         "@nestjs/schematics": "^9.0.0",
         "@nestjs/testing": "^9.0.0",
@@ -53,11 +54,13 @@
         "@types/express": "^4.17.13",
         "@types/jest": "29.2.4",
         "@types/jsonwebtoken": "^9.0.1",
+        "@types/lodash": "^4.14.194",
         "@types/node": "18.11.18",
         "@types/passport-jwt": "^3.0.8",
         "@types/passport-local": "^1.0.35",
         "@types/supertest": "^2.0.11",
         "jest": "29.3.1",
+        "kill-port": "^2.0.1",
         "prettier": "^2.3.2",
         "source-map-support": "^0.5.20",
         "supertest": "^6.1.3",
@@ -66,22 +69,5 @@
         "ts-node": "^10.0.0",
         "tsconfig-paths": "4.1.1",
         "typescript": "^4.7.4"
-    },
-    "jest": {
-        "moduleFileExtensions": [
-            "js",
-            "json",
-            "ts"
-        ],
-        "rootDir": "src",
-        "testRegex": ".*\\.spec\\.ts$",
-        "transform": {
-            "^.+\\.(t|j)s$": "ts-jest"
-        },
-        "collectCoverageFrom": [
-            "**/*.(t|j)s"
-        ],
-        "coverageDirectory": "../coverage",
-        "testEnvironment": "node"
     }
 }
