--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
         "noFallthroughCasesInSwitch": false,
         "paths": {
             "@app/common": ["libs/common/src/"],
-            "@app/common/*": ["libs/common/src/*"]
+            "@app/common/*": ["libs/common/src/*"],
+            "@app/modules/*": ["src/modules/*"]
         }
     }
 }
