--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
     test:
-        runs-on: [self-hosted, ubuntu-latest]
+        runs-on: self-hosted
 
         strategy:
             matrix:
