--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Node.js Tests
 
 on:
     push:
-        branches: [main]
+        branches: [main, feature/*]
     pull_request:
         branches: [main]
 
