--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Node.js Tests
 
 on:
     push:
-        branches: [main]
+        branches: [main, feature/*]
     pull_request:
         branches: [main]
 
@@ -10,22 +10,17 @@ jobs:
     test:
         runs-on: self-hosted
 
-        strategy:
-            matrix:
-                node-version: [18.x]
-
         steps:
-            - uses: actions/checkout@v3
-            - name: Set Node.js 18.x
-              uses: actions/setup-node@v3
+            - name: Checkout code
+              uses: actions/checkout@v2
+
+            - name: Use Node.js
+              uses: actions/setup-node@v2
               with:
                   node-version: 18.x
-                  cache: 'yarn'
-            - name: Run install
-              uses: borales/actions-yarn@v4
-              with:
-                  cmd: install # will run `yarn install` command
-            - name: Test the app
-              uses: borales/actions-yarn@v4
-              with:
-                  cmd: test # will run `yarn test` command
+
+            - name: Install dependencies
+              run: yarn install
+
+            - name: Run tests
+              run: yarn test
